<resources>
    <string name="app_name">FileManager</string>
    <string name="action_menu_settings">Настройки</string>
    <string name="it_is_not_dirrectory">Это не директория!</string>
    <string name="it_is_root_directory">Это корневая директория!</string>
    <string name="file_operations_copy">Копировать</string>
    <string name="file_operations_delete">Удалить</string>
    <string name="file_operations_rename">Переименовать</string>
    <string name="file_operations_move">Переместить</string>
    <string name="rename_dialog_tittle">Переименование файла</string>
    <string name="rename_dialog_name_input">Введите новое имя файла</string>
    <string name="rename_dialog_positive_button">Переименовать</string>
    <string name="empty_input_warning">Вы ничего не ввели!</string>
    <string name="negative_button">Отмена</string>
    <string name="error_rename">Не удалось переименовать объект!</string>
    <string name="operation_result_fail">Ошибка при выполнении операции</string>
    <string name="operation_result_success">Операция успешно выполнена</string>
    <string name="file_operations_delete_complete">Удалено</string>
    <string name="delete_dialog_body">Удалить выделенные файлы?</string>
    <string name="delete_dialog_tittle">Удаление файлов</string>
    <string name="delete_dialog_positive_button">Удалить</string>
    <string name="horizontal_progress_dialog_tittle">Ход выполнения</string>
    <string name="horizontal_progress_dialog_body">Прогресс текущей операции</string>
    <string name="copy_dialog_tittle">Копирование</string>
    <string name="copy_dialog_body">Копировать выбранные объекты?</string>
    <string name="copy_dialog_positive_button">Копировать</string>
    <string name="additional_panel_paste">Вставить</string>
    <string name="file_operations_copy_complete">Скопировано</string>
    <string name="move_dialog_tittle">Перемещение</string>
    <string name="move_dialog_body">Переместить выделенные объекты?</string>
    <string name="move_dialog_positive_button">Переместить</string>
    <string name="additional_panel_move">Переместить сюда</string>
    <string name="file_operations_duplicate_appendix" translatable="false">-copy</string>
    <string name="action_menu_search">Поиск файлов</string>
    <string name="action_menu_about">О программе</string>
    <string name="action_menu_exit">Выход</string>
    <string name="settings_view_category">Настройки представления</string>
    <string name="settings_view_sort_by_name">По имени</string>
    <string name="settings_view_sort_by_name_folder_first">По имени (сначала папки)</string>
    <string name="settings_view_sort_by_change_new_first">По дате изменения (по убыв.)</string>
    <string name="settings_view_sort_by_change_old_first">По дате изменения (по возр.)</string>
    <string name="settings_view_sort_by_size_small_first">По размеру (сначала маленькие)</string>
    <string name="settings_view_sort_by_size_big_first">По размеру (сначала большие)</string>
    <string name="settings_view_sort">Настройка сортировки</string>
    <string name="settings_view_sort_summary">Настройка сортировки (по имени, дате изменения, размеру)</string>
    <string name="search_button">Поиск</string>
    <string name="search_dialog_tittle">Поиск файлов</string>
    <string name="search_dialog_body">Введите название файла (или часть названия) и укажите путь поиска</string>
    <string name="search_dialog_positive_button">Найти</string>
    <string name="search_dialog_cb_text">Искать в текущей папке</string>
    <string name="search_dialog_search_file_label">Название файла:</string>
    <string name="search_dialog_search_path_label">Путь поиска:</string>
    <string name="properties_name_label">Имя:</string>
    <string name="properties_change_time_label">Время:</string>
    <string name="properties_owner_label">Владелец:</string>
    <string name="properties_group_label">Группа:</string>
    <string name="properties_permissions_label">Разрешения:</string>
    <string name="properties_size_label">Размер:</string>
    <string name="properties_change_permissions_button">Управление правами доступа</string>
    <string name="properties_sha1_label" translatable="false">SHA-1:</string>
    <string name="properties_type_label">Тип:</string>
    <string name="properties">Свойства</string>
    <string name="object_type_unknown_file">Неизвестный тип файлов</string>
    <string name="object_type_dir">Директория</string>
    <string name="settings_view_show_dirs_size">Показывать размер директорий</string>
    <string name="settings_view_show_dirs_size_summary">Внимание! Включение данного параметра влияет на производительность</string>
    <string name="settings_view_show_files_size">Показывать размер файлов</string>
    <string name="settings_view_show_files_size_summary">Отображение размера файлов с точностью до 2 знаков после запятой</string>
    <string name="settings_view_show_change_time">Показывать время изменения</string>
    <string name="settings_view_show_change_time_summary">Включение отображения времени последнего изменения файлов и директорий</string>
    <string name="properties_calculating">вычисление ...</string>
    <string name="ok_button" translatable="false">ОК</string>
    <string name="empty_string" translatable="false">-</string>
    <string name="edit_permissions_read_permission_label">Чтение</string>
    <string name="edit_permissions_write_permission_label">Запись</string>
    <string name="edit_permissions_execute_permission_label">Выполнение</string>
    <string name="edit_permissions_owner_label">Владелец</string>
    <string name="edit_permissions_group_label">Группа</string>
    <string name="edit_permissions_others_label">Другие</string>
    <string name="permissions">Разрешения</string>
    <string name="edit_permissions">Изменение разрешений</string>
    <string name="edit_button">Применить</string>
    <string name="edit_permissions_fail">Ошибка при изменении разрешений</string>
    <string name="properties_symlink_label">Ссылка на:</string>
    <string name="rename_dialog_its_old_name">Задайте новое имя!</string>
    <string name="create_button">Создать</string>
    <string name="create_dialog_new_file">Новый файл</string>
    <string name="create_dialog_new_dir">Новая папка</string>
    <string name="create_dialog_file_tittle">Создание файла</string>
    <string name="create_dialog_dir_tittle">Создание директории</string>
    <string name="create_dialog_file_body">Введите имя файла</string>
    <string name="create_dialog_dir_body">Введите имя директории</string>
    <string name="favorite_dialog_add_tittle">Добавление в закладки</string>
    <string name="favorite_dialog_add_body">В закладки будет добавлен текущий путь. Задайте алиас закладки.</string>
    <string name="favorite_dialog_add_button">Добавить</string>
    <string name="file_operations_zip">Архивировать</string>
    <string name="zip_dialog_name_input">Введите имя архива</string>
    <string name="file_operations_unzip">Распаковать архив</string>
    <string name="settings_general_category">Общие</string>
    <string name="settings_general_save_last_path">Запоминать последний путь</string>
    <string name="settings_general_save_last_path_summary">При следующем запуске, отобразится последняя открытая директория</string>
    <string name="compressLevel">Выберите степень сжатия</string>
    <string name="setPassword">Установить пароль</string>
    <string name="passwordLabel">Пароль на архив</string>
    <string name="encryptMethodLabel">Метод шифрования</string>
    <string name="splitLabel">Разделение архива на части</string>
    <string name="action_menu_check_root">Проверить Root права</string>
    <string name="settings_root_category">Настройки Root доступа</string>
    <string name="settings_root_test_root_time">Время показа диалога проверки Root прав</string>
    <string name="settings_root_test_root_time_summary">Время в течение которого будет отображаться диалог проверки Root прав. По окончанию отсчета, диалоговое окно автоматически закроется</string>
    <string name="action_menu_mem_usage_stat">Инф. по разделам</string>
    <string name="memory_usage_mount_point" translatable="false"><b>Point</b></string>
    <string name="memory_usage_point_size" translatable="false"><b>Size</b></string>
    <string name="memory_usage_available" translatable="false"><b>Free</b></string>
    <string name="memory_usage_point_usage" translatable="false"><b>Used</b></string>
    <string name="memory_usage_point_no_info">Инф. о системных разделах недоступна</string>
    <string name="settings_textviewer_category">Настройки TextViewer</string>
    <string name="settings_textviewer_font_size">Размер шрифта</string>
    <string name="settings_textviewer_font_size_summary">Настройка размера отображаемого шрифта </string>
    <string name="settings_textviewer_line_break">Перенос строки</string>
    <string name="settings_textviewer_line_break_summary">Включается перенос всех строк которые не умещаются на экране</string>
    <string name="file_operations_open_in_textviewer">Открыть в TextViewer</string>
    <string name="file_operations_open_in_texteditor">Открыть в TextEditor</string>
    <string name="settings_texteditor_allow_bak_files">Разрешить создание резервных копий</string>
    <string name="settings_texteditor_allow_bak_files_summary">Во избежание потери данных, при открытии файла на редактирование будет создаваться его резервная копия (*.bak)</string>
    <string name="settings_textviewer_line_nums">Номера строк</string>
    <string name="settings_textviewer_line_nums_summary">Отображать номера строк</string>
    <string name="action_menu_terminal">Терминал</string>
    <string name="settings_terminal_category">Настройки терминала</string>
    <string name="settings_terminal_font_size">Настройки шрифта терминала</string>
    <string name="settings_terminal_font_size_summary">Размер шрифта</string>
    <string name="settings_terminal_line_break">Разрешить перенос строк в терминале</string>
    <string name="settings_terminal_line_break_summary">Строки которые не влезают на весь экран будут переноситься на новую строку</string>
    <string name="settings_terminal_line_nums_summary">Включить отображение номера строк</string>
    <string name="file_operations_encrypt">Зашифровать файл</string>
    <string name="file_operations_decrypt">Расшифровать файл</string>
    <string name="settings_crypto_category">Настройки шифрования</string>
    <string name="settings_crypto_key_lenght">Длина ключа</string>
    <string name="settings_crypto_key_lenght_summary">128 или 256 бит</string>
    <string name="settings_view_show_selected_files_size">Показывать размер выделенных объектов</string>
    <string name="settings_view_show_selected_files_size_summary">Показывать суммарный размер выделенных файлов и папок</string>
    <string name="action_menu_work_files">Рабочие файлы</string>
    <string name="settings_general_allow_self_copy" translatable="false">SELF COPY</string>
    <string name="settings_general_allow_self_copy_summary">Разрешить копирование папок в самих себя</string>
    <string name="action_menu_help">Помощь</string>
    <string name="settings_terminal_line_nums">Показывать номера строк</string>
    <string name="settings_view_show_hidden">Показывать скрытые объекты</string>
    <string name="settings_view_show_hidden_summary">Показывать скрытие файлы и папки</string>
    <string name="settings_general_show_current_partition_mem_stat">Использование памяти в текущем разделе</string>
    <string name="settings_general_show_current_partition_mem_stat_summary">Отображать доп. панель с информацией о размере раздела, кол-ве свободной и используемой памяти</string>
    <string name="settings_general_show_count_objects_panel">Показывать количество объектов</string>
    <string name="settings_general_show_count_objects_panel_summary">Показывать количество директорий и файлов в текущей директории</string>
</resources>