<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/zip_dialog_name_input"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zipName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/compressLevel"
        android:paddingLeft="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="0"
        android:entries="@array/zipCompressArray"
        android:entryValues="@array/zipCompressValues"
        android:id="@+id/compressLevel" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPassword"
        android:defaultValue="false"
        android:id="@+id/setPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/passwordLabel"
        android:id="@+id/passwordLabel"
        android:visibility="invisible"
        android:paddingLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordValue"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/encryptMethodLabel"
        android:id="@+id/encryptMethodLabel"
        android:visibility="invisible" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="0"
        android:entries="@array/encryptMethodsArray"
        android:entryValues="@array/encryptMethodsValues"
        android:id="@+id/zipEncryptMethod"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/splitLabel"
        android:paddingLeft="10dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="0"
        android:entries="@array/zipSplitArray"
        android:entryValues="@array/zipSplitValues"
        android:id="@+id/zipSplit" />

</LinearLayout>