<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/memory_usage_table_layout"
    android:background="@color/grey">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_usage_mount_point"
            android:textSize="12sp"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_usage_point_size"
            android:textSize="12sp"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_usage_point_usage"
            android:textSize="12sp"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_usage_available"
            android:textSize="12sp"
            android:layout_column="3" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memory_usage_ext_sd"
            android:textSize="12sp"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memory_usage_point_ext_sd_size"
            android:textSize="12sp"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memory_usage_point_ext_sd_usage"
            android:textSize="12sp"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/memory_usage_point_ext_sd_available"
            android:textSize="12sp"
            android:layout_column="3" />

    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memory_usage_point_no_info"
            android:id="@+id/memory_usage_point_no_info"
            android:textSize="12sp"
            android:visibility="invisible" />

    </LinearLayout>

</TableLayout>